force-app/main/default/objects/DocumentGenerationLog__c/DocumentGenerationLog__c.object-meta.xml
<CustomObject>
    <description>Audit log for document generation events. Tracks success/failure, timing, and errors.</description>
    <label>Document Generation Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Generation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>