force-app/main/default/objects/DocumentGenerationLog__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>The ContentDocument ID of the generated PDF file</description>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>