force-app/main/default/objects/DocumentGenerationLog__c/fields/DurationMs__c.field-meta.xml
<CustomField>
    <fullName>DurationMs__c</fullName>
    <description>Total time taken to generate the document in milliseconds</description>
    <label>Duration (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>