force-app/main/default/objects/DocumentGenerationLog__c/fields/GeneratedBy__c.field-meta.xml
<CustomField>
    <fullName>GeneratedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who initiated the document generation</description>
    <label>Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Document Generation Logs</relationshipLabel>
    <relationshipName>DocumentGenerationLogs</relationshipName>
    <type>Lookup</type>
</CustomField>