force-app/main/default/objects/DocumentGenerationLog__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>The Salesforce record ID that the document was generated for</description>
    <externalId>true</externalId>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>