force-app/main/default/objects/DocumentGenerationLog__c/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <description>The developer name of the template used</description>
    <label>Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>